tdf#155951 sw: fix crash using XTextRange::getString() in selectionChanged()

XTextRange::getString() triggered selection change event,
resulting infinite recursion, when getString() used
in selectionChanged() of the listener.

Steps to reproduce (used by the unit test, too):

Add a XSelectionChangeListener to the document with a
selectionChanged() calling the getString() of the selected
text range. Select a word in the document editor using
the Ctrl-Shift-arrow keys.

Change-Id: I87a0f60cee3663f5303d6eb6980058ccdcc373e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153356
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 0534715608aad7cc68f83ad4b72d8be0a35d0d6f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153345